@@ -16,6 +16,7 @@ C Dungeon initialization subroutine
 C
 C MISCELLANEOUS VARIABLES
 C
+        CHARACTER VEDIT
 	COMMON /STAR/ MBASE,STRBIT
 	COMMON /VERS/ VMAJ,VMIN,VEDIT
 	COMMON /TIME/ PLTIME,SHOUR,SMIN,SSEC
