@@ -21,6 +21,7 @@ C Save game state
 C
 C MISCELLANEOUS VARIABLES
 C
+        CHARACTER VEDIT
 	COMMON /VERS/ VMAJ,VMIN,VEDIT
 	COMMON /TIME/ PLTIME,SHOUR,SMIN,SSEC
 C
@@ -71,6 +72,7 @@ C Restore game state
 C
 C MISCELLANEOUS VARIABLES
 C
+        CHARACTER VEDIT
 	COMMON /VERS/ VMAJ,VMIN,VEDIT
 	COMMON /TIME/ PLTIME,SHOUR,SMIN,SSEC
 C
